--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     </head>
     <body>
         <h1>sejam bem-vindos ao meu site</h1>
+        <h2>vendendo morango do amor recheado de chocolate</h2>
+        <ul>
+            <li>conheça o shaulin</li>
+            <li>eu comprei um bobi goods por 10 reais</li>
+            <li>não valeu a pena me arrependo</li>
+            <li>te gustas taco bell?</li>
+        </ul>
     </body>
     <footer></footer>
 <html>
