--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
             <li>eu comprei um bobi goods por 10 reais</li>
             <li>não valeu a pena me arrependo</li>
             <li>te gustas taco bell?</li>
+            <li><a href="sobre.html">nossa historia</a><li>
         </ul>
     </body>
     <footer></footer>
-<html>s
+<html>
