--- a/sobre.html
+++ b/sobre.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>aguá coca latão</title>
-        <meta charset="utf-8"
+        <meta charset="utf-8">
     </head>
     <body>
         <h1> mi bomboclat</h1>
