--- a/sobre.html
+++ b/sobre.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h1> mi bomboclat</h1>
-        <img src="C:\Users\felipe.btin\Downloads\images.jpg" alt="Labubu clan">
+        <img src="images.jpg" alt="Labubu clan">
     </body>
 </html>
