--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <body>
         <img src="imagem gojo.jpg" alt="gojo e o mais honrado">
         <H1>Satoru Gojo é um dos personagens principais do universo de Jujutsu Kaisen, criado por Gege Akutami.
-             Ele é considerado o feiticeiro jujutsu mais poderoso de sua geração e pertence ao clã Gojo, um dos clãs mais influentes do mundo jujutsu.
+            <figure>
+            <img src="mario.jpg"  alt="mario time">  
+            </figure>
+            Ele é considerado o feiticeiro jujutsu mais poderoso de sua geração e pertence ao clã Gojo, um dos clãs mais influentes do mundo jujutsu.
               Satoru nasceu com dois dons extremamente raros: o Seis Olhos (Rikugan) e o Ilimitado (Limitless), uma técnica herdada de seu clã que manipula o espaço </H1>
+              <!--honrado-->
         <h1>sejam bem-vindos ao meu site</h1>
         <h2>vendendo morango do amor recheado de chocolate</h2>
         <ul>
